Revert to JDK17 for CCRL compatibility (#46)
* Revert to jdk17 for CCRL compatibility

* Revert to jdk17 for CCRL compatibility

* Update pom version